Business Unit : 1. Pembuatan map data