@@ -3,56 +3,51 @@ package com.example.auth.controller;
 import com.example.auth.model.Item;
 import com.example.auth.service.ItemService;
 import jakarta.servlet.http.HttpSession;
-import org.springframework.beans.factory.annotation.Value;
+
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.servlet.mvc.support.RedirectAttributes;
+import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.IntStream;
+import java.util.Optional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Controller
 public class ItemController {
+    
+    private static final Logger log = LoggerFactory.getLogger(ItemController.class);
 
-    private final ItemService service;
+    private final ItemService itemService;
 
-    @Value("${app.pagination.page-size:10}")
-    private int defaultPageSize;
-
-    @Value("${app.location:Page_Components}")
-    private String appLocation;
-
-    public ItemController(ItemService service) {
-        this.service = service;
+    public ItemController(ItemService itemService) {
+        this.itemService = itemService;
     }
 
-    @ModelAttribute("businessUnits")
-    public List<String> businessUnits() {
-        return Arrays.asList(
-                "PT Mindo",
-                "PT Visiniaga",
-                "PT Primavisi",
-                "PT Bimoli",
-                "PT Transmoda"
-        );
-    }
+    // Dropdown options (sesuai requirement)
+    private static final List<String> BUSINESS_UNITS = List.of(
+            "PT Mindo",
+            "PT Visiniaga",
+            "PT Primavisi",
+            "PT Bimoli",
+            "PT Transmoda"
+    );
 
-    @ModelAttribute("itemTypes")
-    public List<String> itemTypes() {
-        return Arrays.asList(
-                "Raw Material",
-                "General Material",
-                "Spare Part",
-                "Finish Goods",
-                "Fixed Assets",
-                "Logs"
-        );
+    private static final List<String> ITEM_TYPES = List.of(
+            "Finish Good",
+            "Spare Part",
+            "Raw Material",
+            "General Material",
+            "Sawn Timber",
+            "Fixed Asset",
+            "Waste Material"
+    );
+
+    private static void putFormOptions(Model model) {
+        model.addAttribute("businessUnits", BUSINESS_UNITS);
+        model.addAttribute("itemTypes", ITEM_TYPES);
     }
 
     private boolean isLoggedIn(HttpSession session) {
@@ -60,139 +55,117 @@ public class ItemController {
     }
 
     @GetMapping("/items")
-    public String items(
-            Model model,
-            @RequestParam(name = "page", defaultValue = "0") int page,
-            @RequestParam(name = "size", required = false) Integer size,
-            HttpSession session
-    ) {
-        if (!isLoggedIn(session)) {
-            return "redirect:/login";
-        }
+    public String items(Model model, HttpSession session) {
+        if (!isLoggedIn(session)) return "redirect:/login";
 
-        int pageSize = (size == null || size <= 0) ? defaultPageSize : size;
-        if (page < 0) {
-            page = 0;
-        }
-
-        long totalElements = service.countAll();
-        int totalPages = (int) Math.ceil(totalElements / (double) pageSize);
-
-        if (totalPages > 0 && page > totalPages - 1) {
-            page = totalPages - 1;
-        }
-
-        List<Item> items = service.getPage(page, pageSize);
-
+        List<Item> items = itemService.listAll();
         model.addAttribute("items", items);
-        model.addAttribute("currentPage", page);
-        model.addAttribute("pageSize", pageSize);
-        model.addAttribute("totalElements", totalElements);
-        model.addAttribute("totalPages", totalPages);
-        model.addAttribute("hasPrev", page > 0);
-        model.addAttribute("hasNext", totalPages > 0 && page < totalPages - 1);
-
-        if (totalPages > 1) {
-            model.addAttribute("pageNumbers", IntStream.range(0, totalPages).boxed().toList());
-        }
-
-        return appLocation + "/ItemMaster/items";
+        return "items";
     }
 
     @GetMapping("/items/new")
-    public String newItemForm(Model model, HttpSession session) {
-        if (!isLoggedIn(session)) {
-            return "redirect:/login";
-        }
+    public String newItem(Model model, HttpSession session) {
+        if (!isLoggedIn(session)) return "redirect:/login";
 
-        model.addAttribute("item", new com.example.auth.model.Item());
-        model.addAttribute("mode", "new");
-
-        return appLocation + "/ItemMaster/item-form";
-    }
-
-    @GetMapping("/items/{id}/edit")
-    public String editItem(
-            @PathVariable Long id,
-            Model model,
-            RedirectAttributes ra,
-            HttpSession session
-    ) {
-        try {
-            if (!isLoggedIn(session)) {
-                return "redirect:/login";
-            }
-
-            Item item = service.findById(id);
-            model.addAttribute("item", item);
-            model.addAttribute("mode", "edit");
-
-            return appLocation + "/ItemMaster/item-form";
-        } catch (Exception e) {
-            ra.addFlashAttribute("error", "Item not found");
-            return "redirect:/items";
-        }
+        model.addAttribute("item", new Item());
+        model.addAttribute("mode", "create");
+        putFormOptions(model);
+        return "item_form";
     }
 
     @PostMapping("/items")
-    public String saveItem(
-            @ModelAttribute Item item,
-            RedirectAttributes ra,
+    public String createItem(
+            @RequestParam String code,
+            @RequestParam String description,
+            @RequestParam String itemType,
+            @RequestParam(required = false, defaultValue = "0") String stock,
+            @RequestParam(required = false) String note,
+            @RequestParam String businessUnit,
+            Model model,
             HttpSession session
     ) {
-        try {
-            Object userIdObj = session.getAttribute("userId");
-            if (userIdObj == null) {
-                return "redirect:/login";
-            }
+        if (!isLoggedIn(session)) return "redirect:/login";
 
-            item.setCreatedBy(userIdObj.toString());
-            service.save(item);
-            ra.addFlashAttribute("success", "Item saved successfully");
-        } catch (Exception e) {
-            ra.addFlashAttribute("error", "Failed to save item: " + e.getMessage());
+        Item item = new Item();
+        item.setCode(code == null ? "" : code.trim());
+        item.setDescription(description == null ? "" : description.trim());
+        item.setItemType(itemType);
+        item.setStock(parseBigDecimalOrZero(stock));
+        item.setNote(note);
+        item.setBusinessUnit(businessUnit);
+        String username = String.valueOf(session.getAttribute("userName"));
+        String error = itemService.create(item, username);
+        if (error != null) {
+            model.addAttribute("error", error);
+            model.addAttribute("item", item);
+            model.addAttribute("mode", "create");
+            putFormOptions(model);
+            return "item_form";
         }
-
         return "redirect:/items";
+    }
+
+    @GetMapping("/items/{id}/edit")
+    public String editItem(@PathVariable Long id, Model model, HttpSession session) {
+        if (!isLoggedIn(session)) return "redirect:/login";
+
+        Optional<Item> itemOpt = itemService.getById(id);
+        if (itemOpt.isEmpty()) return "redirect:/items";
+
+        model.addAttribute("item", itemOpt.get());
+        model.addAttribute("mode", "edit");
+        putFormOptions(model);
+        return "item_form";
     }
 
     @PostMapping("/items/{id}")
     public String updateItem(
             @PathVariable Long id,
-            @ModelAttribute Item item,
-            RedirectAttributes ra,
+            @RequestParam String description,
+            @RequestParam String itemType,
+            @RequestParam(required = false, defaultValue = "0") String stock,
+            @RequestParam(required = false) String note,
+            Model model,
             HttpSession session
     ) {
-        try {
-            if (!isLoggedIn(session)) {
-                return "redirect:/login";
-            }
+        if (!isLoggedIn(session)) return "redirect:/login";
 
-            item.setUpdatedBy(session.getAttribute("userId").toString());
-            service.update(id, item);
-            ra.addFlashAttribute("success", "Item updated successfully");
-        } catch (Exception e) {
-            ra.addFlashAttribute("error", "Failed to update item: " + e.getMessage());
+        Optional<Item> itemOpt = itemService.getById(id);
+        if (itemOpt.isEmpty()) return "redirect:/items";
+
+        Item item = itemOpt.get();
+        item.setDescription(description == null ? "" : description.trim());
+        item.setItemType(itemType);
+        item.setStock(parseBigDecimalOrZero(stock));
+        item.setNote(note);
+        String username = String.valueOf(session.getAttribute("userName"));
+        String error = itemService.update(id, item, username);
+        if (error != null) {
+            model.addAttribute("error", error);
+            model.addAttribute("item", item);
+            model.addAttribute("mode", "edit");
+            putFormOptions(model);
+            return "item_form";
         }
 
         return "redirect:/items";
     }
 
-    @PostMapping("/items/{id}/delete")
-    public String deleteItem(@PathVariable Long id, RedirectAttributes ra) {
-        try {
-            service.delete(id);
-            ra.addFlashAttribute("success", "Item deleted successfully");
-        } catch (Exception e) {
-            ra.addFlashAttribute("error", "Failed to delete item: " + e.getMessage());
-        }
-
-        return "redirect:/items";
+    @GetMapping // Ini logger untuk debug saja
+    public String list(Model model) {
+        List<Item> items = itemService.listAll();
+        System.out.println("Items count = " + items.size());
+        log.info("Items count = {}", items.size());
+        model.addAttribute("items", items);
+        return "items";
     }
 
-    @PostMapping("/items/logout")
-    public String logout(HttpSession session) {
-        session.invalidate();
-        return "redirect:/login";
+    private static BigDecimal parseBigDecimalOrZero(String input) {
+        try {
+            if (input == null || input.trim().isEmpty()) return BigDecimal.ZERO;
+            return new BigDecimal(input.trim());
+        } catch (Exception ex) {
+            return BigDecimal.ZERO;
+        }
     }
 }
